examples/datalog/10_edge_cases/54_empty_join_result.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_empty_join
Knowledge graph 'test_empty_join' created.
Switched to knowledge graph: test_empty_join
> .kg use test_empty_join
Switched to knowledge graph: test_empty_join
> +left[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'left'.
> +right[(10,), (20,), (30,)].
Inserted 3 fact(s) into 'right'.
> empty_join(A, B) :- left(A), right(A).
Script error: Query execution failed: Unsafe rule: Atom { relation: "empty_join", args: [Variable("A"), Variable("B")] }. Variables ["B"] in head do not appear in positive body atoms.
